--- a/index.html
+++ b/index.html
@@ -4,16 +4,39 @@
   <meta charset="UTF-8">
   <title>Plush Bear Vibration Control</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="app/style.css">
+  <!-- Bootstrap CSS CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Custom styles -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Plush Bear Vibration Control</h1>
-    <p>Control the vibration patterns of your plush bear using the buttons below.</p>
-  <div class="controls">
-    <button onclick="activatePattern(1)">Vibration Pattern 1</button>
-    <button onclick="activatePattern(2)">Vibration Pattern 2</button>
-    <div class="status" id="status"></div>
+  <div class="container mt-4">
+    <h1 class="text-center mb-4">Plush Bear Vibration Control</h1>
+    <div class="row justify-content-center">
+      <div class="col-auto">
+        <button class="btn btn-danger mx-2" onclick="activatePattern(1)">Anger</button>
+        <button class="btn btn-warning mx-2" onclick="activatePattern(2)">Happiness</button>
+        <button class="btn btn-secondary mx-2" onclick="activatePattern(3)">Neutral</button>
+        <button class="btn btn-primary mx-2" onclick="activatePattern(4)">Sadness</button>
+      </div>
+    </div>
+    <div class="row justify-content-center mt-3">
+      <div class="col-auto">
+        <div id="status" class="alert alert-info py-2 px-3" role="alert"></div>
+      </div>
+    </div>
   </div>
+  <div id="pattern-builder">
+    <h2>Create Custom Pattern</h2>
+    <input type="text" id="pattern-name" placeholder="Pattern name" />
+    <div id="steps"></div>
+    <button onclick="addStep()">Add Step</button>
+    <button onclick="savePattern()">Save Pattern</button>
+  </div>
+  <div id="pattern-list">
+    <h2>Saved Patterns</h2>
+    <ul id="patterns"></ul>
+  <div id="custom-patterns"></div>
   <script src="app/logic.js"></script>
 </body>
 </html>
