--- a/public/index.html
+++ b/public/index.html
@@ -80,6 +80,17 @@
         </a>
       </div>
     </div>
+
+<!-- UI Element for automatic Arduino IP setup -->
+    <div class="d-flex justify-content-between align-items-center">
+      <div id="device-setup" class="d-flex gap-2">
+        <div id="detected">No device detected</div>
+        <input id="arduino-ip" class="form-control form-control-sm" placeholder="e.g. 192.168.1.100" />
+        <button class="btn btn-sm btn-outline-light" onclick="saveIP()">Save</button>
+        <button class="btn btn-sm btn-outline-light" onclick="testConnection()">Test</button>
+      </div>
+    </div>
+
   </div>
   <script src="logic.js"></script>
 </body>
