--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
     </div>
 
 <!-- UI Element for automatic Arduino IP setup -->
-    <div class="d-flex justify-content-between align-items-center">
+    <div class="d-flex justify-content-center">
       <div id="device-setup" class="d-flex gap-2">
         <div id="detected">No device detected</div>
         <input id="arduino-ip" class="form-control form-control-sm" placeholder="e.g. 192.168.1.100" />
